<resources>
    <string name="app_name">FruitFolio</string>
    <string name="background">background</string>
    <string name="email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="fruitfolio">FruitFolio</string>
    <string name="fruits">FRUITS</string>
    <string name="vegetables">VEGETABLES</string>
    <string name="berries">BERRIES</string>
    <string name="product_type">Product Type</string>
    <string name="product_class">Product Class</string>
    <string name="product_sort">Product Sort</string>
    <string name="_0_0">0,0</string>
    <string name="comments">Comments: 0</string>
    <string name="my_comments">My comments</string>
    <string name="star_1">Star 1</string>
    <string name="star_2">Star 2</string>
    <string name="star_3">Star 3</string>
    <string name="star_4">Star 4</string>
    <string name="star_5">Star 5</string>
    <string name="home">Home</string>
    <string name="rating">Rating</string>
    <string name="write">Write...</string>
    <string name="delete">delete</string>
    <string name="camera">camera</string>
    <string name="logout">logout</string>
</resources>