<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Space
        android:id="@+id/topSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.15" />


    <TextView
        android:id="@+id/textViewTransparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fruitfolio"
        android:textSize="48sp"
        android:background="@android:color/transparent"
        android:textColor="#147049"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topSpace"/>

    <EditText
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="14"
        android:inputType="text"
        android:textSize="18sp"
        android:imeOptions="actionDone"
        android:hint="@string/firstname"
        android:textColorHint="#88147049"
        android:textColor="#147049"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/login_text_field_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTransparent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="14"
        android:inputType="text"
        android:textSize="18sp"
        android:imeOptions="actionDone"
        android:hint="@string/lastname"
        android:textColorHint="#88147049"
        android:textColor="#147049"
        android:layout_margin="10dp"
        android:paddingStart="15dp"
        android:gravity="center_vertical"
        android:paddingEnd="15dp"
        android:background="@drawable/login_text_field_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="14"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:imeOptions="actionDone"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:textColorHint="#88147049"
        android:textColor="#147049"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/login_text_field_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameText"/>

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="14"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        android:textColorHint="#88147049"
        android:textColor="#147049"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/login_text_field_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:gravity="center"
            android:ems="7"
            android:background="@drawable/button_sign_up_background"
            android:layout_marginEnd="10dp"
            android:text="@string/sign_up"
            android:textColor="#147049"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="18sp"
            android:ems="6"
            android:background="@drawable/button_sign_in_background"
            android:layout_marginStart="10dp"
            android:text="@string/sign_in"
            android:textColor="#147049"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>