<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fruitsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/fruits"
            android:gravity="center"
            android:text="@string/fruits"
            android:textColor="#FFFFFF"
            android:textSize="68sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vegetablesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/fruits"
            android:gravity="center"
            android:text="@string/vegetables"
            android:textColor="#FFFFFF"
            android:textSize="56sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/berriesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/fruits"
            android:gravity="center"
            android:text="@string/vegetables"
            android:textColor="#FFFFFF"
            android:textSize="56sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/fruitFolioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fruitfolio"
        android:textColor="#147049"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="60dp"
        android:background="#147049"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>